Update codes: PEAK! active, add 15 expired codes to archive

--- a/codes.html
+++ b/codes.html
@@ -316,18 +316,9 @@
                 <div class="code-info">
                     <div class="code-name">PEAK!</div>
                     <div class="code-reward">🎁 Reward: 10x Rerolls</div>
-                    <span class="code-status status-active">✓ NEW - Active from Dec 6</span>
+                    <span class="code-status status-active">✓ ACTIVE</span>
                 </div>
                 <button class="copy-btn" onclick="copyCode('PEAK!')">Copy Code</button>
-            </div>
-
-            <div class="code-card" style="border-left: 4px solid #4caf50;">
-                <div class="code-info">
-                    <div class="code-name">SORRYFORSHUTDOWN</div>
-                    <div class="code-reward">🎁 Reward: 5x Rerolls</div>
-                    <span class="code-status status-active">✓ NEW</span>
-                </div>
-                <button class="copy-btn" onclick="copyCode('SORRYFORSHUTDOWN')">Copy Code</button>
             </div>
 
             <p style="margin-top: 1.5rem; color: #666; font-style: italic;">
@@ -340,12 +331,128 @@
             <h3>❌ Expired Codes (No Longer Working)</h3>
             
             <p style="color: #666; font-style: italic; margin-bottom: 1rem;">
-                ℹ️ Check back regularly - we'll move expired codes here as new ones are released.
+                ℹ️ These codes have expired and can no longer be redeemed. Keep this page bookmarked for new codes!
             </p>
             
-            <p style="color: #999; text-align: center; padding: 2rem;">
-                No expired codes yet. All current codes are still active!
-            </p>
+            <div class="code-card" style="opacity: 0.6;">
+                <div class="code-info">
+                    <div class="code-name">SORRYFORSHUTDOWN</div>
+                    <div class="code-reward">🎁 Reward: 5x Rerolls</div>
+                    <span class="code-status status-expired">✗ EXPIRED</span>
+                </div>
+            </div>
+
+            <div class="code-card" style="opacity: 0.6;">
+                <div class="code-info">
+                    <div class="code-name">300K!</div>
+                    <div class="code-reward">🎁 Reward: Milestone Rewards</div>
+                    <span class="code-status status-expired">✗ EXPIRED</span>
+                </div>
+            </div>
+
+            <div class="code-card" style="opacity: 0.6;">
+                <div class="code-info">
+                    <div class="code-name">100KLIKES</div>
+                    <div class="code-reward">🎁 Reward: Likes Milestone Rewards</div>
+                    <span class="code-status status-expired">✗ EXPIRED</span>
+                </div>
+            </div>
+
+            <div class="code-card" style="opacity: 0.6;">
+                <div class="code-info">
+                    <div class="code-name">200K!</div>
+                    <div class="code-reward">🎁 Reward: Milestone Rewards</div>
+                    <span class="code-status status-expired">✗ EXPIRED</span>
+                </div>
+            </div>
+
+            <div class="code-card" style="opacity: 0.6;">
+                <div class="code-info">
+                    <div class="code-name">100K!</div>
+                    <div class="code-reward">🎁 Reward: Milestone Rewards</div>
+                    <span class="code-status status-expired">✗ EXPIRED</span>
+                </div>
+            </div>
+
+            <div class="code-card" style="opacity: 0.6;">
+                <div class="code-info">
+                    <div class="code-name">40KLIKES</div>
+                    <div class="code-reward">🎁 Reward: Likes Milestone Rewards</div>
+                    <span class="code-status status-expired">✗ EXPIRED</span>
+                </div>
+            </div>
+
+            <div class="code-card" style="opacity: 0.6;">
+                <div class="code-info">
+                    <div class="code-name">20KLIKES</div>
+                    <div class="code-reward">🎁 Reward: Likes Milestone Rewards</div>
+                    <span class="code-status status-expired">✗ EXPIRED</span>
+                </div>
+            </div>
+
+            <div class="code-card" style="opacity: 0.6;">
+                <div class="code-info">
+                    <div class="code-name">15KLIKES</div>
+                    <div class="code-reward">🎁 Reward: Likes Milestone Rewards</div>
+                    <span class="code-status status-expired">✗ EXPIRED</span>
+                </div>
+            </div>
+
+            <div class="code-card" style="opacity: 0.6;">
+                <div class="code-info">
+                    <div class="code-name">10KLIKES</div>
+                    <div class="code-reward">🎁 Reward: Likes Milestone Rewards</div>
+                    <span class="code-status status-expired">✗ EXPIRED</span>
+                </div>
+            </div>
+
+            <div class="code-card" style="opacity: 0.6;">
+                <div class="code-info">
+                    <div class="code-name">5KLIKES</div>
+                    <div class="code-reward">🎁 Reward: Likes Milestone Rewards</div>
+                    <span class="code-status status-expired">✗ EXPIRED</span>
+                </div>
+            </div>
+
+            <div class="code-card" style="opacity: 0.6;">
+                <div class="code-info">
+                    <div class="code-name">BETA</div>
+                    <div class="code-reward">🎁 Reward: Beta Tester Rewards</div>
+                    <span class="code-status status-expired">✗ EXPIRED</span>
+                </div>
+            </div>
+
+            <div class="code-card" style="opacity: 0.6;">
+                <div class="code-info">
+                    <div class="code-name">RELEASE!</div>
+                    <div class="code-reward">🎁 Reward: Release Celebration</div>
+                    <span class="code-status status-expired">✗ EXPIRED</span>
+                </div>
+            </div>
+
+            <div class="code-card" style="opacity: 0.6;">
+                <div class="code-info">
+                    <div class="code-name">POSTRELEASE</div>
+                    <div class="code-reward">🎁 Reward: Post-Release Rewards</div>
+                    <span class="code-status status-expired">✗ EXPIRED</span>
+                </div>
+            </div>
+
+            <div class="code-card" style="opacity: 0.6;">
+                <div class="code-info">
+                    <div class="code-name">QNA</div>
+                    <div class="code-reward">🎁 Reward: Q&A Event Rewards</div>
+                    <span class="code-status status-expired">✗ EXPIRED</span>
+                </div>
+            </div>
+
+            <div class="code-card" style="opacity: 0.6;">
+                <div class="code-info">
+                    <div class="code-name">RELEASE</div>
+                    <div class="code-reward">🎁 Reward: Release Rewards</div>
+                    <span class="code-status status-expired">✗ EXPIRED</span>
+                </div>
+            </div>
         </div>
 
         <!-- How to Redeem Section -->
