Add Ore Guide page and update Codes page title with December 2024

--- a/index.html
+++ b/index.html
@@ -361,9 +361,8 @@
             <nav>
                 <a href="#calculator">Calculator</a>
                 <a href="/codes.html">Codes</a>
+                <a href="/ore-guide.html">Ore Guide</a>
                 <a href="#features">Features</a>
-                <a href="#what-is">What Is</a>
-                <a href="#how-to">How To</a>
                 <a href="#faq">FAQ</a>
             </nav>
         </div>
