Add Crafting Guide page with complete strategies and tips

--- a/index.html
+++ b/index.html
@@ -361,9 +361,8 @@
             <nav>
                 <a href="#calculator">Calculator</a>
                 <a href="/codes.html">Codes</a>
-                <a href="/ore-guide.html">Ore Guide</a>
-                <a href="#features">Features</a>
-                <a href="#faq">FAQ</a>
+                <a href="/ore-guide.html">Ores</a>
+                <a href="/crafting-guide.html">Crafting</a>
             </nav>
         </div>
     </header>
