Add recipes database page with filtering and search functionality

--- a/index.html
+++ b/index.html
@@ -361,8 +361,8 @@
             <nav>
                 <a href="#calculator">Calculator</a>
                 <a href="/codes.html">Codes</a>
+                <a href="/recipes.html">Recipes</a>
                 <a href="/ore-guide.html">Ores</a>
-                <a href="/crafting-guide.html">Crafting</a>
             </nav>
         </div>
     </header>
