Update navigation bars across all pages - exclude current page link

--- a/index.html
+++ b/index.html
@@ -359,10 +359,10 @@
         <div class="container">
             <h1>⚒️ Forge Calculator</h1>
             <nav>
-                <a href="#calculator">Calculator</a>
+                <a href="/ore-guide.html">Ores</a>
                 <a href="/codes.html">Codes</a>
                 <a href="/recipes.html">Recipes</a>
-                <a href="/ore-guide.html">Ores</a>
+                <a href="/crafting-guide.html">Crafting</a>
             </nav>
         </div>
     </header>
