--- a/recipes.html
+++ b/recipes.html
@@ -330,8 +330,8 @@
             <h1>📖 The Forge Recipes</h1>
             <nav>
                 <a href="/">Calculator</a>
+                <a href="/ore-guide.html">Ores</a>
                 <a href="/codes.html">Codes</a>
-                <a href="/recipes.html">Recipes</a>
                 <a href="/crafting-guide.html">Crafting</a>
             </nav>
         </div>
