--- a/codes.html
+++ b/codes.html
@@ -292,8 +292,9 @@
             <h1>⚒️ The Forge Codes - December 2025</h1>
             <nav>
                 <a href="/">Calculator</a>
-                <a href="/blog.html">Blog</a>
-                <a href="/codes.html">Codes</a>
+                <a href="/ore-guide.html">Ores</a>
+                <a href="/recipes.html">Recipes</a>
+                <a href="/crafting-guide.html">Crafting</a>
             </nav>
         </div>
     </header>
