--- a/crafting-guide.html
+++ b/crafting-guide.html
@@ -261,9 +261,9 @@
             <h1>🔨 The Forge Crafting Guide</h1>
             <nav>
                 <a href="/">Calculator</a>
+                <a href="/ore-guide.html">Ores</a>
                 <a href="/codes.html">Codes</a>
-                <a href="/ore-guide.html">Ore Guide</a>
-                <a href="/crafting-guide.html">Crafting</a>
+                <a href="/recipes.html">Recipes</a>
             </nav>
         </div>
     </header>
