--- a/ore-guide.html
+++ b/ore-guide.html
@@ -225,8 +225,8 @@
             <nav>
                 <a href="/">Calculator</a>
                 <a href="/codes.html">Codes</a>
-                <a href="/ore-guide.html">Ore Guide</a>
-                <a href="/blog.html">Blog</a>
+                <a href="/recipes.html">Recipes</a>
+                <a href="/crafting-guide.html">Crafting</a>
             </nav>
         </div>
     </header>
