Add hammer emoji favicon to all pages

--- a/codes.html
+++ b/codes.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⚒️</text></svg>">
     <meta name="description" content="The Forge Codes December 2025 - Get free ores, coins, and rewards in The Forge Roblox game. Updated daily with working codes.">
     <meta name="keywords" content="the forge codes december 2025, forge codes roblox, the forge redeem codes, roblox forge codes, forge game codes">
     <link rel="canonical" href="https://forge-calculator.com/codes.html">
