--- a/crafting-guide.html
+++ b/crafting-guide.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⚒️</text></svg>">
     <meta name="description" content="Complete crafting guide for The Forge Roblox - Learn how to craft legendary weapons and armor with optimal ore combinations and strategies.">
     <meta name="keywords" content="the forge crafting, forge crafting guide, roblox forge crafting, the forge crafting calculator, forge crafting tips, the forge how to craft">
     <link rel="canonical" href="https://forge-calculator.com/crafting-guide.html">
