--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⚒️</text></svg>">
     <meta name="description" content="Privacy Policy for Roblox The Forge Calculator">
     <link rel="canonical" href="https://forge-calculator.com/privacy-policy.html">
     <title>Privacy Policy - Roblox The Forge Calculator</title>
