--- a/recipes.html
+++ b/recipes.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⚒️</text></svg>">
     <meta name="description" content="Complete The Forge recipes database - Find the best crafting recipes for legendary weapons and armor in The Forge Roblox game.">
     <meta name="keywords" content="the forge recipes, forge roblox recipes, the forge crafting recipes, forge recipes list, best forge recipes, legendary forge recipes">
     <link rel="canonical" href="https://forge-calculator.com/recipes.html">
