Add comprehensive progression guide blog post

--- a/blog.html
+++ b/blog.html
@@ -140,6 +140,17 @@
         <div class="blog-grid">
             <div class="blog-card">
                 <div class="blog-card-header">
+                    <h2>Mastering The Forge: Your Complete Progression Guide</h2>
+                    <div class="blog-meta">December 6, 2024 • 8 min read</div>
+                </div>
+                <div class="blog-card-body">
+                    <p>From novice crafter to legendary blacksmith - learn the complete progression path in The Forge. Discover strategies, avoid common mistakes, and understand what it takes to succeed in this resource-driven crafting game.</p>
+                    <a href="/blog-mastering-the-forge.html" class="read-more">Read More →</a>
+                </div>
+            </div>
+
+            <div class="blog-card">
+                <div class="blog-card-header">
                     <h2>Introducing The Forge Calculator</h2>
                     <div class="blog-meta">December 4, 2024 • 8 min read</div>
                 </div>
