Add new code: 400K! - 8 Rerolls

--- a/codes.html
+++ b/codes.html
@@ -316,6 +316,16 @@
             
             <div class="code-card" style="border-left: 4px solid #4caf50;">
                 <div class="code-info">
+                    <div class="code-name">400K!</div>
+                    <div class="code-reward">🎁 Reward: 8x Rerolls</div>
+                    <span class="code-status status-active">✓ ACTIVE</span>
+                    <span style="background: #ff9800; color: #fff; padding: 0.2rem 0.6rem; border-radius: 12px; font-size: 0.75rem; margin-left: 0.5rem; font-weight: bold;">NEW!</span>
+                </div>
+                <button class="copy-btn" onclick="copyCode('400K!', event)">Copy Code</button>
+            </div>
+
+            <div class="code-card" style="border-left: 4px solid #4caf50;">
+                <div class="code-info">
                     <div class="code-name">PEAK!</div>
                     <div class="code-reward">🎁 Reward: 10x Rerolls</div>
                     <span class="code-status status-active">✓ ACTIVE</span>
@@ -340,6 +350,7 @@
                         <label style="display: block; margin-bottom: 0.5rem; font-weight: bold; color: #333;">Which code did you try?</label>
                         <select id="codeSelect" required style="width: 100%; padding: 0.8rem; border: 2px solid #ff5722; border-radius: 8px; font-size: 1rem;">
                             <option value="">Select a code...</option>
+                            <option value="400K!">400K! (NEW)</option>
                             <option value="PEAK!">PEAK!</option>
                         </select>
                     </div>
