Add comprehensive Wiki homepage with search functionality

--- a/index.html
+++ b/index.html
@@ -538,6 +538,7 @@
         <div class="container">
             <h1>⚒️ Forge Calculator</h1>
             <nav>
+                <a href="/wiki.html">Wiki</a>
                 <a href="/ore-guide.html">Ores</a>
                 <a href="/codes.html">Codes</a>
                 <a href="/recipes.html">Recipes</a>
