--- a/codes.html
+++ b/codes.html
@@ -293,9 +293,9 @@
             <h1>⚒️ The Forge Codes - December 2025</h1>
             <nav>
                 <a href="/">Calculator</a>
-                <a href="/ore-guide.html">Ores</a>
+                <a href="/wiki.html">Wiki</a>
                 <a href="/recipes.html">Recipes</a>
-                <a href="/crafting-guide.html">Crafting</a>
+                <a href="/feedback.html">Feedback</a>
             </nav>
         </div>
     </header>
