--- a/index.html
+++ b/index.html
@@ -539,10 +539,9 @@
             <h1>⚒️ Forge Calculator</h1>
             <nav>
                 <a href="/wiki.html">Wiki</a>
-                <a href="/ore-guide.html">Ores</a>
                 <a href="/codes.html">Codes</a>
                 <a href="/recipes.html">Recipes</a>
-                <a href="/crafting-guide.html">Crafting</a>
+                <a href="/feedback.html">Feedback</a>
             </nav>
         </div>
     </header>
