--- a/recipes.html
+++ b/recipes.html
@@ -331,9 +331,9 @@
             <h1>📖 The Forge Recipes</h1>
             <nav>
                 <a href="/">Calculator</a>
-                <a href="/ore-guide.html">Ores</a>
+                <a href="/wiki.html">Wiki</a>
                 <a href="/codes.html">Codes</a>
-                <a href="/crafting-guide.html">Crafting</a>
+                <a href="/feedback.html">Feedback</a>
             </nav>
         </div>
     </header>
