Add Wiki link to navigation on all pages

--- a/crafting-guide.html
+++ b/crafting-guide.html
@@ -262,7 +262,7 @@
             <h1>🔨 The Forge Crafting Guide</h1>
             <nav>
                 <a href="/">Calculator</a>
-                <a href="/ore-guide.html">Ores</a>
+                <a href="/wiki.html">Wiki</a>
                 <a href="/codes.html">Codes</a>
                 <a href="/recipes.html">Recipes</a>
             </nav>
