--- a/blog-introducing-calculator.html
+++ b/blog-introducing-calculator.html
@@ -140,7 +140,15 @@
 </head>
 <body>
     <header>
-        <h1>⚒️ The Forge Calculator Blog</h1>
+        <div class="container">
+            <h1>⚒️ The Forge Calculator Blog</h1>
+            <nav style="display: flex; gap: 0.5rem; margin-top: 1rem; flex-wrap: wrap;">
+                <a href="/" style="color: rgba(255, 255, 255, 0.9); text-decoration: none; padding: 0.5rem 1rem; border-radius: 8px; transition: all 0.2s ease; font-weight: 500; font-size: 0.95rem;">Calculator</a>
+                <a href="/wiki.html" style="color: rgba(255, 255, 255, 0.9); text-decoration: none; padding: 0.5rem 1rem; border-radius: 8px; transition: all 0.2s ease; font-weight: 500; font-size: 0.95rem;">Wiki</a>
+                <a href="/codes.html" style="color: rgba(255, 255, 255, 0.9); text-decoration: none; padding: 0.5rem 1rem; border-radius: 8px; transition: all 0.2s ease; font-weight: 500; font-size: 0.95rem;">Codes</a>
+                <a href="/recipes.html" style="color: rgba(255, 255, 255, 0.9); text-decoration: none; padding: 0.5rem 1rem; border-radius: 8px; transition: all 0.2s ease; font-weight: 500; font-size: 0.95rem;">Recipes</a>
+            </nav>
+        </div>
     </header>
 
     <div class="container">
