--- a/ore-guide.html
+++ b/ore-guide.html
@@ -225,9 +225,9 @@
             <h1>🪨 The Forge Ore Guide</h1>
             <nav>
                 <a href="/">Calculator</a>
+                <a href="/wiki.html">Wiki</a>
                 <a href="/codes.html">Codes</a>
                 <a href="/recipes.html">Recipes</a>
-                <a href="/crafting-guide.html">Crafting</a>
             </nav>
         </div>
     </header>
