--- a/crafting-guide.html
+++ b/crafting-guide.html
@@ -263,8 +263,10 @@
             <nav>
                 <a href="/">Calculator</a>
                 <a href="/wiki.html">Wiki</a>
+                <a href="/ore-guide.html">Ores</a>
                 <a href="/codes.html">Codes</a>
                 <a href="/recipes.html">Recipes</a>
+                <a href="/feedback.html">Feedback</a>
             </nav>
         </div>
     </header>
