--- a/feedback.html
+++ b/feedback.html
@@ -318,8 +318,10 @@
             <nav>
                 <a href="/">Calculator</a>
                 <a href="/wiki.html">Wiki</a>
+                <a href="/ore-guide.html">Ores</a>
                 <a href="/codes.html">Codes</a>
                 <a href="/recipes.html">Recipes</a>
+                <a href="/crafting-guide.html">Crafting</a>
             </nav>
         </div>
     </header>
