--- a/ore-guide.html
+++ b/ore-guide.html
@@ -228,6 +228,8 @@
                 <a href="/wiki.html">Wiki</a>
                 <a href="/codes.html">Codes</a>
                 <a href="/recipes.html">Recipes</a>
+                <a href="/crafting-guide.html">Crafting</a>
+                <a href="/feedback.html">Feedback</a>
             </nav>
         </div>
     </header>
