--- a/recipes.html
+++ b/recipes.html
@@ -332,7 +332,9 @@
             <nav>
                 <a href="/">Calculator</a>
                 <a href="/wiki.html">Wiki</a>
+                <a href="/ore-guide.html">Ores</a>
                 <a href="/codes.html">Codes</a>
+                <a href="/crafting-guide.html">Crafting</a>
                 <a href="/feedback.html">Feedback</a>
             </nav>
         </div>
