--- a/wiki.html
+++ b/wiki.html
@@ -369,8 +369,10 @@
             <h1>📚 The Forge Wiki</h1>
             <nav>
                 <a href="/">Calculator</a>
+                <a href="/ore-guide.html">Ores</a>
                 <a href="/codes.html">Codes</a>
                 <a href="/recipes.html">Recipes</a>
+                <a href="/crafting-guide.html">Crafting</a>
                 <a href="/feedback.html">Feedback</a>
             </nav>
         </div>
