Add Forge Ore Calculator CTA section to ore-guide page and remove duplicate content from recipes page

--- a/ore-guide.html
+++ b/ore-guide.html
@@ -480,6 +480,19 @@
             <h4 style="color: #ff5722; margin-top: 1.5rem;">Can I remove ores from crafted equipment?</h4>
             <p>No, once equipment is crafted, the ores are permanently used. Always double-check your combinations before crafting!</p>
         </div>
+        <!-- The Forge Ore Calculator Section -->
+        <div class="cta-box">
+            <h2>⚒️ The Forge Ore Calculator</h2>
+            <p style="margin-bottom: 1rem; font-size: 1.125rem;">Ready to put your ore knowledge to use? Try our free Forge Ore Calculator to find the perfect ore combinations for your builds!</p>
+            <p style="margin-bottom: 2rem;">The Forge Ore Calculator helps you:</p>
+            <ul style="text-align: left; max-width: 600px; margin: 0 auto 2rem auto; list-style-position: inside;">
+                <li style="margin-bottom: 0.75rem;">✅ Calculate exact ore percentages for optimal traits</li>
+                <li style="margin-bottom: 0.75rem;">✅ Preview equipment stats before crafting</li>
+                <li style="margin-bottom: 0.75rem;">✅ Test different ore combinations risk-free</li>
+                <li style="margin-bottom: 0.75rem;">✅ Maximize your ore efficiency and avoid waste</li>
+            </ul>
+            <a href="/" class="cta-btn" style="font-size: 1.25rem; padding: 1.25rem 3rem;">🔥 Try The Forge Ore Calculator Now →</a>
+        </div>
     </div>
 
     <footer>
