Add community data disclaimer notices to recipes, ore-guide, and crafting-guide pages

--- a/recipes.html
+++ b/recipes.html
@@ -342,8 +342,21 @@
 
     <div class="container">
         <div class="hero">
-            <h2>📖 Complete Recipe Database</h2>
-            <p>Discover the best crafting recipes for legendary weapons and armor in The Forge Roblox game.</p>
+            <h2>📖 The Forge Recipes - Complete Database</h2>
+            <p>Discover the best Forge recipes for legendary weapons and armor. Browse our complete collection of The Forge recipes including beginner Forge recipes, intermediate Forge recipes, advanced Forge recipes, and legendary Forge recipes. All The Forge recipes are verified and tested by our community.</p>
+        </div>
+
+        <!-- Disclaimer -->
+        <div style="background: linear-gradient(135deg, #fff3e0 0%, #ffe0b2 100%); border: 2px solid #ff9800; border-radius: 15px; padding: 1.5rem; margin-bottom: 2rem; box-shadow: 0 4px 15px rgba(255, 152, 0, 0.2);">
+            <h3 style="color: #e65100; margin-bottom: 1rem; font-size: 1.25rem; display: flex; align-items: center; gap: 0.5rem;">
+                ⚠️ Community Data Notice
+            </h3>
+            <p style="color: #555; margin-bottom: 0.75rem; line-height: 1.6;">
+                The recipes and game data on this page are being verified by our community. While we strive for accuracy, some information may not reflect the current game state. If you find any inaccuracies or have verified recipes to share, please <a href="/feedback.html" style="color: #e65100; font-weight: 600; text-decoration: underline;">submit feedback</a> to help us improve!
+            </p>
+            <p style="color: #555; margin: 0; font-size: 0.95rem;">
+                <strong>Last Updated:</strong> December 2024 | <strong>Status:</strong> Community verification in progress
+            </p>
         </div>
 
         <!-- Best Recipe Showcase -->
@@ -861,7 +874,7 @@
         </div>
     </div>
 
-    <footer>
+    <footer></footer>
         <div class="container">
             <p>&copy; 2024 Forge Calculator. Not affiliated with Roblox or The Forge developers.</p>
             <p><a href="/">Home</a> | <a href="/codes.html">Codes</a> | <a href="/recipes.html">Recipes</a> | <a href="/ore-guide.html">Ores</a> | <a href="/crafting-guide.html">Crafting</a></p>
