--- a/crafting-guide.html
+++ b/crafting-guide.html
@@ -277,6 +277,19 @@
             <p>Learn how to craft legendary weapons and armor with optimal ore combinations and expert strategies.</p>
         </div>
 
+        <!-- Disclaimer -->
+        <div style="background: linear-gradient(135deg, #fff3e0 0%, #ffe0b2 100%); border: 2px solid #ff9800; border-radius: 15px; padding: 1.5rem; margin-bottom: 2rem; box-shadow: 0 4px 15px rgba(255, 152, 0, 0.2);">
+            <h3 style="color: #e65100; margin-bottom: 1rem; font-size: 1.25rem; display: flex; align-items: center; gap: 0.5rem;">
+                ⚠️ Community Data Notice
+            </h3>
+            <p style="color: #555; margin-bottom: 0.75rem; line-height: 1.6;">
+                The crafting strategies and game mechanics described on this page are being verified by our community. While we strive for accuracy, some information may not reflect the current game state. If you have verified strategies or corrections, please <a href="/feedback.html" style="color: #e65100; font-weight: 600; text-decoration: underline;">submit feedback</a> to help us improve!
+            </p>
+            <p style="color: #555; margin: 0; font-size: 0.95rem;">
+                <strong>Last Updated:</strong> December 2024 | <strong>Status:</strong> Community verification in progress
+            </p>
+        </div>
+
         <!-- What is Crafting -->
         <div class="content-section">
             <h3>What is Crafting in The Forge?</h3>
