Add 'What is The Forge?' game overview section to wiki page

--- a/wiki.html
+++ b/wiki.html
@@ -385,6 +385,82 @@
             <p>Your complete guide to mastering The Forge. Explore guides, recipes, ores, and everything you need to become a legendary blacksmith.</p>
         </div>
 
+        <!-- What is The Forge Section -->
+        <div style="background: #fff; border-radius: 20px; padding: 3rem 2.5rem; margin-bottom: 2rem; box-shadow: 0 10px 40px rgba(0, 0, 0, 0.1);">
+            <h2 style="color: #ff5722; font-size: 2rem; margin-bottom: 1.5rem; text-align: center; font-weight: 700;">⚒️ What is The Forge?</h2>
+            
+            <p style="text-align: center; color: #666; margin-bottom: 2rem; font-size: 1.15rem; line-height: 1.8;">
+                <strong style="color: #ff5722;">The Forge</strong> is an immersive Roblox adventure game where you become a legendary blacksmith. Venture into dangerous caverns, mine precious ores, craft powerful weapons and armor, and battle fearsome enemies in your quest for glory.
+            </p>
+
+            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 1.5rem; margin-top: 2rem;">
+                <!-- Mining -->
+                <div style="background: linear-gradient(135deg, #e8f5e9 0%, #c8e6c9 100%); border-radius: 16px; padding: 2rem; border-left: 4px solid #4caf50;">
+                    <div style="font-size: 3rem; text-align: center; margin-bottom: 1rem;">⛏️</div>
+                    <h3 style="color: #2e7d32; font-size: 1.3rem; margin-bottom: 1rem; text-align: center;">Mining</h3>
+                    <p style="color: #555; line-height: 1.6; text-align: center;">
+                        Mine ore veins in unstable caverns. Discover rare materials hidden deep underground.
+                    </p>
+                </div>
+
+                <!-- Forging -->
+                <div style="background: linear-gradient(135deg, #fff3e0 0%, #ffe0b2 100%); border-radius: 16px; padding: 2rem; border-left: 4px solid #ff9800;">
+                    <div style="font-size: 3rem; text-align: center; margin-bottom: 1rem;">🔨</div>
+                    <h3 style="color: #e65100; font-size: 1.3rem; margin-bottom: 1rem; text-align: center;">Forging</h3>
+                    <p style="color: #555; line-height: 1.6; text-align: center;">
+                        Forge materials into weapons and armor. Create legendary equipment with unique properties.
+                    </p>
+                </div>
+
+                <!-- Combat -->
+                <div style="background: linear-gradient(135deg, #ffebee 0%, #ffcdd2 100%); border-radius: 16px; padding: 2rem; border-left: 4px solid #f44336;">
+                    <div style="font-size: 3rem; text-align: center; margin-bottom: 1rem;">⚔️</div>
+                    <h3 style="color: #c62828; font-size: 1.3rem; margin-bottom: 1rem; text-align: center;">Combat</h3>
+                    <p style="color: #555; line-height: 1.6; text-align: center;">
+                        Battle zombies and subterranean enemies. Test your skills against dangerous foes.
+                    </p>
+                </div>
+
+                <!-- Exploration -->
+                <div style="background: linear-gradient(135deg, #e3f2fd 0%, #bbdefb 100%); border-radius: 16px; padding: 2rem; border-left: 4px solid #2196f3;">
+                    <div style="font-size: 3rem; text-align: center; margin-bottom: 1rem;">🗺️</div>
+                    <h3 style="color: #1565c0; font-size: 1.3rem; margin-bottom: 1rem; text-align: center;">Exploration</h3>
+                    <p style="color: #555; line-height: 1.6; text-align: center;">
+                        Explore high-risk regions and hidden areas. Uncover secrets in dangerous territories.
+                    </p>
+                </div>
+            </div>
+
+            <!-- Key Features -->
+            <div style="background: linear-gradient(135deg, #f3e5f5 0%, #e1bee7 100%); border-radius: 16px; padding: 2rem; margin-top: 2rem; border-left: 4px solid #9c27b0;">
+                <h3 style="color: #6a1b9a; font-size: 1.3rem; margin-bottom: 1rem;">🎮 Core Gameplay Features</h3>
+                <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 1rem;">
+                    <ul style="color: #555; line-height: 1.8; margin-left: 1.5rem;">
+                        <li><strong>Resource Gathering:</strong> Mine various ore types with different rarities</li>
+                        <li><strong>Crafting System:</strong> Combine ores to create unique equipment</li>
+                        <li><strong>Character Races:</strong> Choose from 13 races with unique abilities</li>
+                        <li><strong>Progressive Difficulty:</strong> From starter zones to endgame content</li>
+                    </ul>
+                    <ul style="color: #555; line-height: 1.8; margin-left: 1.5rem;">
+                        <li><strong>Multiple Locations:</strong> Stonewake's Cross, Forgotten Kingdom, and more</li>
+                        <li><strong>Enemy Variety:</strong> Face Zombies, Skeletons, and Hell Skeletons</li>
+                        <li><strong>NPC Interactions:</strong> Trade, quest, and upgrade with various NPCs</li>
+                        <li><strong>Reward System:</strong> Earn EXP, Gold, Essences, and rare items</li>
+                    </ul>
+                </div>
+            </div>
+
+            <!-- Call to Action -->
+            <div style="text-align: center; margin-top: 2rem; padding: 2rem; background: linear-gradient(135deg, #ff5722 0%, #ff9800 100%); border-radius: 16px; color: #fff;">
+                <h3 style="font-size: 1.5rem; margin-bottom: 1rem; color: #fff;">Ready to Start Your Journey?</h3>
+                <p style="margin-bottom: 1.5rem; font-size: 1.1rem;">Use our tools and guides to become a master blacksmith!</p>
+                <div style="display: flex; gap: 1rem; justify-content: center; flex-wrap: wrap;">
+                    <a href="/" style="background: #fff; color: #ff5722; padding: 1rem 2rem; border-radius: 8px; text-decoration: none; font-weight: 600; transition: transform 0.3s;">🔥 Try Calculator</a>
+                    <a href="/codes.html" style="background: rgba(255, 255, 255, 0.2); color: #fff; padding: 1rem 2rem; border-radius: 8px; text-decoration: none; font-weight: 600; border: 2px solid #fff; transition: transform 0.3s;">🎁 Get Free Codes</a>
+                </div>
+            </div>
+        </div>
+
         <!-- Search Section -->
         <div class="search-section">
             <div class="search-box">
@@ -1231,6 +1307,9 @@
     <script>
         // Wiki search data
         const wikiPages = [
+            // Game Overview
+            { title: 'What is The Forge?', url: '/wiki.html', desc: 'Learn about The Forge Roblox game - mining, forging, combat, and exploration', keywords: 'what is the forge game overview about gameplay roblox' },
+            
             // Tools
             { title: 'Forge Calculator', url: '/', desc: 'Calculate ore combinations and preview crafting results', keywords: 'calculator tool craft preview' },
             { title: 'Recipe Database', url: '/recipes.html', desc: 'Browse all crafting recipes for weapons and armor', keywords: 'recipes database crafting formulas' },
