Add AI-generated content disclaimers to recipes, crafting guide, and blog pages

--- a/recipes.html
+++ b/recipes.html
@@ -349,13 +349,19 @@
         <!-- Disclaimer -->
         <div style="background: linear-gradient(135deg, #fff3e0 0%, #ffe0b2 100%); border: 2px solid #ff9800; border-radius: 15px; padding: 1.5rem; margin-bottom: 2rem; box-shadow: 0 4px 15px rgba(255, 152, 0, 0.2);">
             <h3 style="color: #e65100; margin-bottom: 1rem; font-size: 1.25rem; display: flex; align-items: center; gap: 0.5rem;">
-                ⚠️ Community Data Notice
+                ⚠️ 数据来源说明 / Data Source Notice
             </h3>
             <p style="color: #555; margin-bottom: 0.75rem; line-height: 1.6;">
-                The recipes and game data on this page are being verified by our community. While we strive for accuracy, some information may not reflect the current game state. If you find any inaccuracies or have verified recipes to share, please <a href="/feedback.html" style="color: #e65100; font-weight: 600; text-decoration: underline;">submit feedback</a> to help us improve!
+                <strong style="color: #d84315;">⚠️ 重要提示：</strong>本页面的大部分配方数据为 <strong style="background: #ffeb3b; padding: 0.2rem 0.4rem; border-radius: 4px; color: #000;">AI 生成内容，未经游戏验证，仅供参考</strong>。部分武器配方（如 Zweihander, Katana, Claymore 等）已更新为真实游戏数据。
+            </p>
+            <p style="color: #555; margin-bottom: 0.75rem; line-height: 1.6;">
+                <strong style="color: #d84315;">⚠️ Important:</strong> Most recipe data on this page is <strong style="background: #ffeb3b; padding: 0.2rem 0.4rem; border-radius: 4px; color: #000;">AI-generated and unverified</strong>. Some weapon recipes (Zweihander, Katana, Claymore, etc.) have been updated with real game data.
+            </p>
+            <p style="color: #555; margin-bottom: 0.75rem; line-height: 1.6;">
+                如果您有真实的游戏配方数据或发现错误，请<a href="/feedback.html" style="color: #e65100; font-weight: 600; text-decoration: underline;">提交反馈</a>帮助我们改进！
             </p>
             <p style="color: #555; margin: 0; font-size: 0.95rem;">
-                <strong>Last Updated:</strong> December 2024 | <strong>Status:</strong> Community verification in progress
+                <strong>最后更新 / Last Updated:</strong> December 2024 | <strong>状态 / Status:</strong> 社区验证中 / Community verification in progress
             </p>
         </div>
 
