Remove Chinese text from AI-generated content disclaimers, keep English only

--- a/blog-mastering-the-forge.html
+++ b/blog-mastering-the-forge.html
@@ -331,10 +331,9 @@
             <!-- AI Content Disclaimer -->
             <div style="background: linear-gradient(135deg, #fff3e0 0%, #ffe0b2 100%); border: 2px solid #ff9800; border-radius: 12px; padding: 1.5rem; margin-bottom: 2rem;">
                 <h4 style="color: #e65100; margin-bottom: 0.75rem; font-size: 1.1rem; display: flex; align-items: center; gap: 0.5rem;">
-                    ⚠️ 内容说明 / Content Notice
+                    ⚠️ Content Notice
                 </h4>
                 <p style="color: #555; margin: 0; line-height: 1.6; font-size: 1rem;">
-                    <strong style="color: #d84315;">⚠️ 本文内容为 <span style="background: #ffeb3b; padding: 0.2rem 0.4rem; border-radius: 4px; color: #000;">AI 生成的通用游戏建议，未经验证，仅供参考</span></strong><br>
                     <strong style="color: #d84315;">⚠️ This article contains <span style="background: #ffeb3b; padding: 0.2rem 0.4rem; border-radius: 4px; color: #000;">AI-generated general game advice, unverified</span></strong>
                 </p>
             </div>
