--- a/crafting-guide.html
+++ b/crafting-guide.html
@@ -280,19 +280,16 @@
         <!-- Disclaimer -->
         <div style="background: linear-gradient(135deg, #fff3e0 0%, #ffe0b2 100%); border: 2px solid #ff9800; border-radius: 15px; padding: 1.5rem; margin-bottom: 2rem; box-shadow: 0 4px 15px rgba(255, 152, 0, 0.2);">
             <h3 style="color: #e65100; margin-bottom: 1rem; font-size: 1.25rem; display: flex; align-items: center; gap: 0.5rem;">
-                ⚠️ 数据来源说明 / Data Source Notice
+                ⚠️ Data Source Notice
             </h3>
-            <p style="color: #555; margin-bottom: 0.75rem; line-height: 1.6;">
-                <strong style="color: #d84315;">⚠️ 重要提示：</strong>本页面的制作策略和游戏机制说明为 <strong style="background: #ffeb3b; padding: 0.2rem 0.4rem; border-radius: 4px; color: #000;">AI 生成的通用建议，未经游戏验证，仅供参考</strong>。
-            </p>
             <p style="color: #555; margin-bottom: 0.75rem; line-height: 1.6;">
                 <strong style="color: #d84315;">⚠️ Important:</strong> The crafting strategies and game mechanics on this page are <strong style="background: #ffeb3b; padding: 0.2rem 0.4rem; border-radius: 4px; color: #000;">AI-generated general advice and unverified</strong>.
             </p>
             <p style="color: #555; margin-bottom: 0.75rem; line-height: 1.6;">
-                如果您有真实的游戏机制信息或发现错误，请<a href="/feedback.html" style="color: #e65100; font-weight: 600; text-decoration: underline;">提交反馈</a>帮助我们改进！
+                If you have verified game mechanics or find errors, please <a href="/feedback.html" style="color: #e65100; font-weight: 600; text-decoration: underline;">submit feedback</a> to help us improve!
             </p>
             <p style="color: #555; margin: 0; font-size: 0.95rem;">
-                <strong>最后更新 / Last Updated:</strong> December 2024 | <strong>状态 / Status:</strong> 社区验证中 / Community verification in progress
+                <strong>Last Updated:</strong> December 2024 | <strong>Status:</strong> Community verification in progress
             </p>
         </div>
 
