--- a/recipes.html
+++ b/recipes.html
@@ -346,25 +346,23 @@
             <p>Discover the best Forge recipes for legendary weapons and armor. Browse our complete collection of The Forge recipes including beginner Forge recipes, intermediate Forge recipes, advanced Forge recipes, and legendary Forge recipes. All The Forge recipes are verified and tested by our community.</p>
         </div>
 
-        <!-- Disclaimer -->
-        <div style="background: linear-gradient(135deg, #fff3e0 0%, #ffe0b2 100%); border: 2px solid #ff9800; border-radius: 15px; padding: 1.5rem; margin-bottom: 2rem; box-shadow: 0 4px 15px rgba(255, 152, 0, 0.2);">
-            <h3 style="color: #e65100; margin-bottom: 1rem; font-size: 1.25rem; display: flex; align-items: center; gap: 0.5rem;">
-                ⚠️ Data Source Notice
+        <!-- Info Notice -->
+        <div style="background: linear-gradient(135deg, #e3f2fd 0%, #bbdefb 100%); border: 2px solid #2196f3; border-radius: 15px; padding: 1.5rem; margin-bottom: 2rem; box-shadow: 0 4px 15px rgba(33, 150, 243, 0.2);">
+            <h3 style="color: #1565c0; margin-bottom: 1rem; font-size: 1.25rem; display: flex; align-items: center; gap: 0.5rem;">
+                ℹ️ Weapon Types Information
             </h3>
             <p style="color: #555; margin-bottom: 0.75rem; line-height: 1.6;">
-                <strong style="color: #d84315;">⚠️ Important:</strong> Most recipe data on this page is <strong style="background: #ffeb3b; padding: 0.2rem 0.4rem; border-radius: 4px; color: #000;">AI-generated and unverified</strong>. Some weapon recipes (Zweihander, Katana, Claymore, etc.) have been updated with real game data.
-            </p>
-            <p style="color: #555; margin-bottom: 0.75rem; line-height: 1.6;">
-                If you have verified recipe data or find errors, please <a href="/feedback.html" style="color: #e65100; font-weight: 600; text-decoration: underline;">submit feedback</a> to help us improve!
+                This page contains information about the 7 weapon types available in The Forge, based on official game data. Use our <a href="/" style="color: #1565c0; font-weight: 600; text-decoration: underline;">calculator</a> to experiment with ore combinations for crafting.
             </p>
             <p style="color: #555; margin: 0; font-size: 0.95rem;">
-                <strong>Last Updated:</strong> December 2024 | <strong>Status:</strong> Community verification in progress
+                <strong>Last Updated:</strong> December 2024
             </p>
         </div>
 
-        <!-- Best Weapon Showcase -->
-        <div style="background: linear-gradient(135deg, #9c27b0 0%, #673ab7 100%); border-radius: 20px; padding: 2.5rem; margin-bottom: 2rem; box-shadow: 0 10px 40px rgba(156, 39, 176, 0.4); border: 2px solid #ce93d8;">
-            <h2 style="color: #fff; text-align: center; font-size: 2rem; margin-bottom: 1.5rem; text-shadow: 0 2px 10px rgba(0,0,0,0.3);">👑 The Forge Best Weapon - Colossal Swords</h2>
+        <!-- Weapons Information Section -->
+        <div class="content-section" style="background: #fff; border-radius: 20px; padding: 2.5rem; margin-bottom: 2rem;">
+            <h2>⚔️ Weapon Types in The Forge</h2>
+            <p style="margin-bottom: 2rem;">The Forge features 7 distinct weapon types, each with unique characteristics and playstyles. Choose your weapon based on your combat preferences and build strategy.</p>
             
             <div style="background: rgba(255,255,255,0.95); border-radius: 15px; padding: 2.5rem; max-width: 900px; margin: 0 auto;">
                 <div style="text-align: center; margin-bottom: 2rem;">
