Update dates to 2025 and remove AI-generated armor recipe from recipes.html

--- a/ore-guide.html
+++ b/ore-guide.html
@@ -249,7 +249,7 @@
                 The ore information and game mechanics described on this page are being verified by our community. While we strive for accuracy, some details may not reflect the current game state. If you have verified game data or corrections, please <a href="/feedback.html" style="color: #e65100; font-weight: 600; text-decoration: underline;">submit feedback</a> to help us improve!
             </p>
             <p style="color: #555; margin: 0; font-size: 0.95rem;">
-                <strong>Last Updated:</strong> December 2024 | <strong>Status:</strong> Community verification in progress
+                <strong>Last Updated:</strong> December 2025
             </p>
         </div>
 
