Remove AI-generated crafting-guide.html and all references, add races/enemies/npcs pages

--- a/blog-mastering-the-forge.html
+++ b/blog-mastering-the-forge.html
@@ -312,7 +312,6 @@
                 <a href="/ore-guide.html">Ores</a>
                 <a href="/codes.html">Codes</a>
                 <a href="/recipes.html">Recipes</a>
-                <a href="/crafting-guide.html">Crafting</a>
                 <a href="/feedback.html">Feedback</a>
             </nav>
         </div>
@@ -612,7 +611,6 @@
                     <li>Browse our <a href="/recipes.html" style="color: #1976d2; font-weight: 600;">Recipes page</a> for proven builds</li>
                     <li>Use the <a href="/" style="color: #1976d2; font-weight: 600;">Calculator</a> to preview your craft</li>
                     <li>Check <a href="/codes.html" style="color: #1976d2; font-weight: 600;">Codes</a> for free ores</li>
-                    <li>Read the <a href="/crafting-guide.html" style="color: #1976d2; font-weight: 600;">Crafting Guide</a> for detailed strategies</li>
                 </ol>
             </div>
 
@@ -633,7 +631,7 @@
     <footer>
         <div class="container">
             <p>&copy; 2024 Forge Calculator. Not affiliated with Roblox or The Forge developers.</p>
-            <p><a href="/">Home</a> | <a href="/blog.html">Blog</a> | <a href="/codes.html">Codes</a> | <a href="/ore-guide.html">Ores</a> | <a href="/crafting-guide.html">Crafting</a></p>
+            <p><a href="/">Home</a> | <a href="/blog.html">Blog</a> | <a href="/codes.html">Codes</a> | <a href="/ore-guide.html">Ores</a></p>
         </div>
     </footer>
 </body>
