--- a/recipes.html
+++ b/recipes.html
@@ -334,7 +334,6 @@
                 <a href="/wiki.html">Wiki</a>
                 <a href="/ore-guide.html">Ores</a>
                 <a href="/codes.html">Codes</a>
-                <a href="/crafting-guide.html">Crafting</a>
                 <a href="/feedback.html">Feedback</a>
             </nav>
         </div>
@@ -776,7 +775,6 @@
             <h2>🔥 Want to Create Your Own Recipe?</h2>
             <p style="margin-bottom: 1.5rem;">Use our calculator to experiment with ore combinations and discover new recipes!</p>
             <a href="/" class="cta-btn">Try Calculator</a>
-            <a href="/crafting-guide.html" class="cta-btn">Crafting Guide</a>
             <a href="/codes.html" class="cta-btn">Get Free Ores</a>
         </div>
 
@@ -848,7 +846,7 @@
     <footer></footer>
         <div class="container">
             <p>&copy; 2024 Forge Calculator. Not affiliated with Roblox or The Forge developers.</p>
-            <p><a href="/">Home</a> | <a href="/codes.html">Codes</a> | <a href="/recipes.html">Recipes</a> | <a href="/ore-guide.html">Ores</a> | <a href="/crafting-guide.html">Crafting</a></p>
+            <p><a href="/">Home</a> | <a href="/codes.html">Codes</a> | <a href="/recipes.html">Recipes</a> | <a href="/ore-guide.html">Ores</a></p>
         </div>
     </footer>
 
