Add Weapons link to navigation bar across all pages

--- a/blog-introducing-calculator.html
+++ b/blog-introducing-calculator.html
@@ -146,6 +146,7 @@
                 <a href="/" style="color: rgba(255, 255, 255, 0.9); text-decoration: none; padding: 0.5rem 1rem; border-radius: 8px; transition: all 0.2s ease; font-weight: 500; font-size: 0.95rem;">Calculator</a>
                 <a href="/wiki.html" style="color: rgba(255, 255, 255, 0.9); text-decoration: none; padding: 0.5rem 1rem; border-radius: 8px; transition: all 0.2s ease; font-weight: 500; font-size: 0.95rem;">Wiki</a>
                 <a href="/ore-guide.html" style="color: rgba(255, 255, 255, 0.9); text-decoration: none; padding: 0.5rem 1rem; border-radius: 8px; transition: all 0.2s ease; font-weight: 500; font-size: 0.95rem;">Ores</a>
+                <a href="/weapons.html" style="color: rgba(255, 255, 255, 0.9); text-decoration: none; padding: 0.5rem 1rem; border-radius: 8px; transition: all 0.2s ease; font-weight: 500; font-size: 0.95rem;">Weapons</a>
                 <a href="/codes.html" style="color: rgba(255, 255, 255, 0.9); text-decoration: none; padding: 0.5rem 1rem; border-radius: 8px; transition: all 0.2s ease; font-weight: 500; font-size: 0.95rem;">Codes</a>
                 <a href="/recipes.html" style="color: rgba(255, 255, 255, 0.9); text-decoration: none; padding: 0.5rem 1rem; border-radius: 8px; transition: all 0.2s ease; font-weight: 500; font-size: 0.95rem;">Recipes</a>
                 <a href="/feedback.html" style="color: rgba(255, 255, 255, 0.9); text-decoration: none; padding: 0.5rem 1rem; border-radius: 8px; transition: all 0.2s ease; font-weight: 500; font-size: 0.95rem;">Feedback</a>
