--- a/races.html
+++ b/races.html
@@ -42,6 +42,7 @@
             <nav>
                 <a href="/">Calculator</a>
                 <a href="/wiki.html">Wiki</a>
+                <a href="/weapons.html">Weapons</a>
                 <a href="/codes.html">Codes</a>
                 <a href="/enemies.html">Enemies</a>
                 <a href="/npcs.html">NPCs</a>
