--- a/recipes.html
+++ b/recipes.html
@@ -333,6 +333,7 @@
                 <a href="/">Calculator</a>
                 <a href="/wiki.html">Wiki</a>
                 <a href="/ore-guide.html">Ores</a>
+                <a href="/weapons.html">Weapons</a>
                 <a href="/codes.html">Codes</a>
                 <a href="/feedback.html">Feedback</a>
             </nav>
