--- a/codes.html
+++ b/codes.html
@@ -306,6 +306,7 @@
                 <a href="/">Calculator</a>
                 <a href="/wiki.html">Wiki</a>
                 <a href="/ore-guide.html">Ores</a>
+                <a href="/weapons.html">Weapons</a>
                 <a href="/recipes.html">Recipes</a>
                 <a href="/feedback.html">Feedback</a>
             </nav>
