--- a/feedback.html
+++ b/feedback.html
@@ -319,6 +319,7 @@
                 <a href="/">Calculator</a>
                 <a href="/wiki.html">Wiki</a>
                 <a href="/ore-guide.html">Ores</a>
+                <a href="/weapons.html">Weapons</a>
                 <a href="/codes.html">Codes</a>
                 <a href="/recipes.html">Recipes</a>
             </nav>
