--- a/index.html
+++ b/index.html
@@ -550,6 +550,7 @@
             <nav>
                 <a href="/wiki.html">Wiki</a>
                 <a href="/ore-guide.html">Ores</a>
+                <a href="/weapons.html">Weapons</a>
                 <a href="/codes.html">Codes</a>
                 <a href="/recipes.html">Recipes</a>
                 <a href="/feedback.html">Feedback</a>
