--- a/npcs.html
+++ b/npcs.html
@@ -36,6 +36,7 @@
             <nav>
                 <a href="/">Calculator</a>
                 <a href="/wiki.html">Wiki</a>
+                <a href="/weapons.html">Weapons</a>
                 <a href="/codes.html">Codes</a>
                 <a href="/races.html">Races</a>
                 <a href="/enemies.html">Enemies</a>
