--- a/ore-guide.html
+++ b/ore-guide.html
@@ -309,6 +309,7 @@
             <nav>
                 <a href="/">Calculator</a>
                 <a href="/wiki.html">Wiki</a>
+                <a href="/weapons.html">Weapons</a>
                 <a href="/codes.html">Codes</a>
                 <a href="/recipes.html">Recipes</a>
                 <a href="/feedback.html">Feedback</a>
